# openrgb-adalight-legacy

./: - Adalight Protokoll Header bauen  Du findest sie im OpenRGB Quellcode wahrscheinlich hier  README.md
OpenRGB-Adalight-Plugin/: .clangd  AdalightDevice.cpp  AdalightDevice.h  AdalightWidget.cpp  AdalightWidget.h  CMakeLists.txt  OpenRGBAdalightPlugin.cpp  OpenRGBAdalightPlugin.h
